fix: remove Videojs controls on iPhone 6/6+
- horrible hack for displaying custom play button still "works" for iPhone 5 and below

--- a/source/stylesheets/_iphone.sass
+++ b/source/stylesheets/_iphone.sass
@@ -56,3 +56,5 @@
       padding: 26px 0 12px 0
     .cities
       width: $cities-width
+    .vjs-big-play-button
+      display: none
